--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "practice makes perfect",
   "main": "index.js",
   "scripts": {
-    "test": "webpack --config webpack.config.js"
+    "start": "webpack --config webpack.config.js"
   },
   "repository": {
     "type": "git",
