--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/windoncloud/webpack-3_8_1#readme",
   "devDependencies": {
     "css-loader": "^3.2.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "style-loader": "^1.0.0",
     "webpack": "^3.8.1"
   }
