--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "css-loader": "^3.2.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "style-loader": "^1.0.0",
-    "webpack": "^3.8.1"
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^3.8.0"
   }
 }
