--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "style-loader": "^1.0.0",
     "webpack": "^3.8.1",
+    "webpack-cli": "^3.3.7",
     "webpack-dev-server": "^3.8.0"
   }
 }
